# sprinkles

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
sprinkles/: _templating.py  commands.py  secrets.py  templating.py
