[tool.poetry]
name = "sprinkles-config"
version = "0.1.2"
description = "Generate config files from AWS Secrets"
authors = ["Okal Otieno <okal@justokal.com>"]
license = "MIT"
packages = [
    { include = "sprinkles"}
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "@^1.14.31"
tomlkit = "@^0.6.0"
click = "@^7.1.2"
Jinja2 = "@^2.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sprinkles = "sprinkles.commands:generate_config"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
